--- a/index.html
+++ b/index.html
@@ -331,47 +331,25 @@ button {
 
   <div id="frutas" class="priceTab active">
     <p>Flame — 250.000</p>
-    <p>Light — 750.000</p>
-    <p>Earth — 3.000.000</p>
-    <p>Time — 9.000.000</p>
+    <p>Light — 1.250.000</p>
+    <p>Earth — 9.000.000</p>
+    <p>Time — 18.000.000</p>
   </div>
 
   <div id="perm" class="priceTab">
     <p>Flame (Perm) — 10.000.000</p>
     <p>Light (Perm) — 14.000.000</p>
-    <p>Earth (Perm) — 22.000.000</p>
-    <p>Time (Perm) — 35.000.000</p>
+    <p>Earth (Perm) — 45.000.000</p>
+    <p>Time (Perm) — 56.000.000</p>
   </div>
 
   <div id="gamepass" class="priceTab">
     <p>2x Maestria — 2.500.000</p>
     <p>2x Money — 2.500.000</p>
-    <p>Tecnologic Blade — 5.500.000</p>
+    <p>Tecnologic Blade — 4.000.000</p>
     <p>VIP — 9.000.000</p>
   </div>
 </div>
-
-    <div id="frutas" class="priceTab">
-      <p>Flame — 250.000</p>
-      <p>Light — 750.000</p>
-      <p>Earth — 3.000.000</p>
-      <p>Time — 9.000.000</p>
-    </div>
-
-    <div id="perm" class="priceTab" style="display:none">
-      <p>Flame (Perm) — 10.000.000</p>
-      <p>Light (Perm) — 14.000.000</p>
-      <p>Earth (Perm) — 22.000.000</p>
-      <p>Time (Perm) — 35.000.000</p>
-    </div>
-
-    <div id="gamepass" class="priceTab" style="display:none">
-      <p>2x Maestria — 2.500.000</p>
-      <p>2x Money — 2.500.000</p>
-      <p>Tecnologic Blade — 5.500.000</p>
-      <p>VIP — 9.000.000</p>
-    </div>
-  </div>
 
   <div class="card">
     <h2>🔄 Calculadora de Trade</h2>
@@ -407,16 +385,16 @@ function showTab(tab){
 
 const values = {
   'Flame': 250000,
-  'Light': 750000,
+  'Light': 1200000,
   'Earth': 3000000,
-  'Time': 9000000,
+  'Time': 18000000,
   'Flame (Perm)': 10000000,
   'Light (Perm)': 14000000,
-  'Earth (Perm)': 22000000,
-  'Time (Perm)': 35000000,
+  'Earth (Perm)': 45000000,
+  'Time (Perm)': 58000000,
   '2x Maestria': 2500000,
   '2x Money': 2500000,
-  'Tecnologic Blade': 5500000,
+  'Tecnologic Blade': 4000000,
   'VIP': 9000000
 };
 
